cluster/base/changedetection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: changedetection
  labels:
    app: changedetection
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
      - name: changedetection
        image: dgtlmoon/changedetection.io:0.60.8
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: data
          mountPath: /datastore
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: changedetection-data
