cluster/base/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: changedetection
spec:
  type: ClusterIP
  selector:
    app: changedetection
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
